dubbo-add provider

--- a/springboot-dubbo/springboot-dubbo-provider/pom.xml
+++ b/springboot-dubbo/springboot-dubbo-provider/pom.xml
@@ -12,16 +12,46 @@
   <artifactId>springboot-dubbo-provider</artifactId>
 
   <dependencies>
-    <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-spring-boot-starter -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+      <!-- Dubbo Spring Boot Starter -->
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-spring-boot-starter</artifactId>
-      <version>2.7.4.1</version>
+      <version>2.7.3</version>
     </dependency>
     <dependency>
-      <artifactId>springboot-dubbo-api</artifactId>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.4.10</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-framework</artifactId>
+      <version>2.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+      <version>2.12.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.gpj</groupId>
+      <artifactId>springboot-dubbo-api</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
-
+  <repositories>
+    <repository>
+      <id>aliyun</id>
+      <name>aliyun releases</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
 </project>
